# nary

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: scene0.json
assets/shaders/: FXAA.frag  fragment.frag  interset.fsh  interset.vsh  point_light_fragment.frag  point_light_vertex.vert  rectangle.frag  rectangle.vert  shadow.frag  shadow.vert  vertex.vert
dep/: CMakeLists.txt
dep/imgui/: CMakeLists.txt  imgui_impl_vulkan_but_better.cpp  imgui_impl_vulkan_but_better.h
src/demo/: FirstApp.cpp  FirstApp.hpp  main.cpp  scene_loader.hpp
src/nary/Compon/: naEventListener.cpp  naEventListener.hpp
src/nary/Core/: math_helper.h
src/nary/Device/: naBuffer.cpp  naBuffer.hpp  naDescriptors.cpp  naDescriptors.hpp  naDevice.cpp  naDevice.hpp  naSwapChain.cpp  naSwapChain.hpp  naWin.cpp  naWin.hpp
src/nary/GO/: GoComponent.cpp  GoComponent.hpp  Scene.cpp  Scene.hpp  naCamera.cpp  naCamera.hpp  naGameObject.cpp  naGameObject.hpp  naPhysicsWorld.cpp  naPhysicsWorld.hpp
src/nary/Render/: RenderManager.cpp  RenderManager.hpp  RenderResource.cpp  RenderResource.hpp  RenderScene.cpp  RenderScene.hpp  naFrameBuffer.cpp  naFrameBuffer.hpp  naFrameInfo.hpp  naImage.cpp  naImage.hpp  naModel.cpp  naModel.hpp  naRenderer.cpp  naRenderer.hpp
src/nary/Render/Pipeline/: naPipeline.cpp  naPipeline.hpp  naShaderCompiler.cpp  naShaderCompiler.hpp
src/nary/Render/System/: naPointLightSystem.cpp  naPointLightSystem.hpp  naRenderShaderOnly.cpp  naRenderShaderOnly.hpp  naRenderSystem.cpp  naRenderSystem.hpp  (+2 more)
src/nary/Resource/: ResourceManager.cpp  ResourceManager.hpp  resource_path.h
src/nary/Tool/: cpix_font.h
src/nary/UI/: naUISystem.cpp  naUISystem.hpp
(+4 files in other folders)
